# diffusion-stash

./: .gitignore  README.md
.github/: dependabot.yml
backend/: .gitignore  Cargo.toml  Dockerfile  docker-build.sh  generate-entities.sh  sample-config.toml  sample-config.yaml
backend/metadata-database/: Cargo.toml
backend/metadata-database/migration/: Cargo.toml
backend/metadata-database/migration/src/: lib.rs  m20250605_102218_create_model_metadata_table.rs  m20250605_102644_create_generated_product_metadata_table.rs  m20250605_103636_create_generated_product_model_association_table.rs  m20250612_110830_create_datetime_index.rs
backend/metadata-database/src/: data.rs  generated_products.rs  lib.rs  models.rs
backend/metadata-database/src/entity/: ai_model.rs  generated_product.rs  generated_product_model_association.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
backend/png-workflow/: Cargo.toml
backend/png-workflow/src/: comfy.rs  lib.rs  main.rs  sdwebui.rs
backend/server/: Cargo.toml
backend/server/src/: lib.rs  storage.rs
backend/server/src/endpoints/: add_model.rs  add_product.rs  decode_png.rs  error_response.rs  get_model_content.rs  get_model_metadata.rs  get_model_thumbnail_content.rs  get_product_content.rs  get_product_metadata.rs  list_model_products.rs  list_models.rs  list_products.rs  mod.rs
backend/server/src/path/: comfyui.rs  file_name.rs  id.rs  mod.rs
backend/server/src/utils/: mod.rs  product_response.rs
backend/src/: config.rs  main.rs
backend/storage/: Cargo.toml
backend/storage/src/: error.rs  lib.rs
backend/storage/src/local/: mod.rs
example/: config.yaml  docker-compose.yml  nginx.conf  start.sh
frontend/: Dockerfile  angular.json  docker-build.sh  package-lock.json  package.json  pnpm-lock.yaml
frontend/nginx/: default.conf
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts
frontend/src/app/apis/data/: model-category.ts  model.ts  product.ts
frontend/src/app/apis/repositories/: model-category-provider.spec.ts  model-category-provider.ts  model-repository.spec.ts  model-repository.ts  path-provider.spec.ts  path-provider.ts  product-repository.ts
frontend/src/app/ui/directive/: default-image.spec.ts  default-image.ts
frontend/src/app/ui/pages/image-detail/: image-detail.css  image-detail.html  image-detail.ts
frontend/src/app/ui/pages/image-gallery/: image-gallery.html  image-gallery.ts
frontend/src/app/ui/pages/landing/: landing.css  landing.html  landing.ts
frontend/src/app/ui/pages/model-detail/: model-detail.css  model-detail.html  model-detail.spec.ts  model-detail.ts
frontend/src/app/ui/pages/model-gallery/: model-gallery.html  model-gallery.spec.ts  model-gallery.ts
frontend/src/app/ui/pages/upload-image/: upload-image.css  upload-image.html  upload-image.ts
frontend/src/app/ui/pages/upload-model/: upload-model.css  upload-model.html  upload-model.spec.ts  upload-model.ts
frontend/src/app/ui/parts/app-bar/: app-bar.css  app-bar.html  app-bar.ts
frontend/src/app/ui/parts/image-info/: image-info.css  image-info.html  image-info.spec.ts  image-info.ts
frontend/src/app/ui/parts/image-list/: image-list.css  image-list.html  image-list.ts
frontend/src/app/ui/parts/model-card/: model-card.css  model-card.html  model-card.ts
frontend/src/app/ui/parts/model-info-table/: model-info-table.html  model-info-table.spec.ts  model-info-table.ts
frontend/src/app/ui/parts/model-list/: model-list.css  model-list.html  model-list.ts
frontend/src/app/ui/parts/model-selector/: model-selector.css  model-selector.html  model-selector.ts
frontend/src/app/ui/parts/pick-file/: pick-file.css  pick-file.html  pick-file.spec.ts  pick-file.ts
frontend/src/app/ui/pipe/: model-content-pipe.spec.ts  model-content-pipe.ts  product-content-pipe.spec.ts  product-content-pipe.ts  thumbnail-pipe.spec.ts  thumbnail-pipe.ts
