[workspace]
members = ["metadata-database", "storage", "metadata-database/migration", "server"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
storage = { path = "storage" }
metadata-database = { path = "metadata-database" }
server = { path = "server" }

async-trait = "0.1.88"
tokio = "1.45.1"

actix-web = "4.11.0"
actix-multipart = "0.7.2"

sea-orm = "1.1.12"

thiserror = "2.0.12"

serde = "1.0.219"
serde_yml = "0.0.12"

chrono = "0.4.41"
uuid = "1.17.0"

log = "0.4.27"
env_logger = "0.11.8"

clap = "4.5.39"

[package]
name = "diffusionstash-backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
storage.workspace = true
metadata-database.workspace = true
server.workspace = true

actix-web.workspace = true

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }
serde_yml.workspace = true

log.workspace = true
env_logger.workspace = true

clap = { workspace = true, features = ["derive"] }
