[workspace]
members = ["metadata-database", "storage", "metadata-database/migration", "server", "png-workflow"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
storage = { path = "storage" }
metadata-database = { path = "metadata-database" }
server = { path = "server" }
png-workflow = { path = "png-workflow" }

migration = { path = "metadata-database/migration" }

async-trait = "0.1.89"
tokio = "1.47.1"

actix-web = "4.11.0"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"

sea-orm = "1.1.12"

thiserror = "2.0.17"

serde = "1.0.219"
serde_json = "1.0.145"
toml = "0.9.7"

regex = "1.11.3"

chrono = "0.4.41"
uuid = "1.18.0"

log = "0.4.27"
env_logger = "0.11.8"

clap = "4.5.48"

png = "0.17.16"

[package]
name = "diffusionstash-backend"
version = "0.2.0"
edition.workspace = true

[dependencies]
storage.workspace = true
metadata-database.workspace = true
server.workspace = true

actix-web.workspace = true
actix-cors.workspace = true

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }
toml.workspace = true

log.workspace = true
env_logger.workspace = true

clap = { workspace = true, features = ["derive"] }
