[workspace]
members = ["metadata-database", "storage", "metadata-database/migration", "server", "png-workflow"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
storage = { path = "storage" }
metadata-database = { path = "metadata-database" }
server = { path = "server" }
png-workflow = { path = "png-workflow" }

migration = { path = "metadata-database/migration" }

async-trait = "0.1.89"
tokio = "1.49.0"

actix-web = "4.12.1"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"

sea-orm = "1.1.12"

thiserror = "2.0.17"

serde = "1.0.219"
serde_json = "1.0.145"
toml = "0.9.8"

regex = "1.12.2"

chrono = "0.4.42"
uuid = "1.19.0"

log = "0.4.29"
env_logger = "0.11.8"

clap = "4.5.51"

png = "0.18.0"

[package]
name = "diffusionstash-backend"
version = "0.2.0"
edition.workspace = true

[dependencies]
storage.workspace = true
metadata-database.workspace = true
server.workspace = true

actix-web.workspace = true
actix-cors.workspace = true

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }
toml.workspace = true

log.workspace = true
env_logger.workspace = true

clap = { workspace = true, features = ["derive"] }
