[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
metadata-database.workspace = true
storage.workspace = true

actix-web.workspace = true
actix-multipart.workspace = true

async-trait.workspace = true

serde = { workspace = true, features = ["derive"] }

chrono = { workspace = true, features = ["serde"] }
uuid.workspace = true

log.workspace = true
